--- a/css/main.css
+++ b/css/main.css
@@ -4,6 +4,48 @@
 /* акцент #18A0FB */
 /* вторичный цвет фона #F5F5F5 */
 
+:root {
+  --primary-text-color: rgba(0, 0, 0, 0.8);
+  --title-text-color: #000000;
+  --accent-color: #18a0fb;
+  --primary-white-color: #ffffff;
+}
+
+body {
+  background-color: var(--primary-white-color);
+  color: var(--primary-text-color);
+
+  font-family: 'Montserrat', sans-serif;
+  letter-spacing: -0.015em;
+}
+
+/* Logo */
+
+.logo {
+  color: var(--title-text-color);
+
+  font-family: 'Comfortaa', cursive;
+}
+
+.logo:hover {
+  color: var(--accent-color);
+}
+
+/* Site nav */
+
+.site-nav .link {
+  color: var(--accent-color);
+}
+
+.site-nav .link:hover,
+.site-nav .link:focus {
+  color: var(--title-text-color);
+}
+
+.site-nav .link.current {
+  color: var(--title-text-color);
+}
+
 .list {
   list-style: none;
 }
