Добавляет стили на секции

--- a/css/main.css
+++ b/css/main.css
@@ -17,6 +17,8 @@ body {
 
   font-family: 'Montserrat', sans-serif;
   letter-spacing: -0.015em;
+  font-size: 18px;
+  line-height: 1.67;
 }
 
 /* Logo */
@@ -25,6 +27,9 @@ body {
   color: var(--title-text-color);
 
   font-family: 'Comfortaa', cursive;
+  font-size: 28px;
+  line-height: 1.14;
+  text-decoration: none;
 }
 
 .logo:hover {
@@ -35,6 +40,11 @@ body {
 
 .site-nav .link {
   color: var(--accent-color);
+
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 1.2;
+  text-decoration: none;
 }
 
 .site-nav .link:hover,
@@ -54,24 +64,38 @@ body {
 
 .hero-title {
   color: var(--title-text-color);
+
+  font-weight: 400;
+  font-size: 56px;
+  line-height: 1.43;
+  text-align: center;
 }
 
 /* Section */
 
 .section-title {
   color: var(--title-text-color);
+
+  font-weight: 400;
+  font-size: 48px;
+  line-height: 1.5;
+  text-align: center;
 }
 
-/* Features */
-
-.feature-list .title {
-  color: var(--title-text-color);
+.section-description {
+  font-size: 36px;
+  line-height: 1.39;
 }
 
-/* Examples */
+/* Features и Examples */
 
+.feature-list .title,
 .work-list .title {
   color: var(--title-text-color);
+
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 1.5;
 }
 
 /* Button */
@@ -79,6 +103,11 @@ body {
 .button {
   color: var(--title-text-color);
   background-color: var(--primary-white-color);
+
+  font-weight: 500;
+  font-size: 15px;
+  line-height: 1.2;
+  text-decoration: none;
 }
 
 .button.primary {
