--- a/css/compendium.css
+++ b/css/compendium.css
@@ -2,3 +2,20 @@ body {
   font-family: 'Helvetica Neue', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', sans-serif;
 }
+
+.box {
+  /* margin-bottom: 50px; */
+  /* padding-bottom: 50px; */
+  /* border: 5px solid tomato; */
+  /* padding: 20px; */
+  /* margin: 20px; */
+  background-color: tomato;
+  height: 100px;
+  /* height: 400px; */
+  /* Высоту для контента не использовать НИКОГДА!!! */
+  /* outline: 2px solid tomato; */
+}
+
+.parent{
+  width: 500px;
+}
