--- a/css/compendium.css
+++ b/css/compendium.css
@@ -1,21 +1,25 @@
+html {
+  box-sizing: border-box;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+}
+
 body {
   font-family: 'Helvetica Neue', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', sans-serif;
 }
 
-.box {
-  /* margin-bottom: 50px; */
-  /* padding-bottom: 50px; */
-  /* border: 5px solid tomato; */
-  /* padding: 20px; */
-  /* margin: 20px; */
+.btn {
+  width: 200px;
+  display: inline-block;
+  padding: 20px 40px;
+  border: 2px solid black;
+  border-radius: 10px;
   background-color: tomato;
-  height: 100px;
-  /* height: 400px; */
-  /* Высоту для контента не использовать НИКОГДА!!! */
-  /* outline: 2px solid tomato; */
-}
-
-.parent{
-  width: 500px;
+  color: white;
+  text-decoration: none;
 }
