--- a/css/compendium.css
+++ b/css/compendium.css
@@ -9,12 +9,28 @@ html {
 }
 
 body {
+  margin: 0;
   font-family: 'Helvetica Neue', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,
     Ubuntu, Cantarell, 'Open Sans', sans-serif;
 }
 
+.box {
+  width: 500px;
+  height: 100px;
+  background-color: teal;
+  /* margin-left: auto;
+  margin-right: auto; */
+  margin: 0 auto;
+}
+
+.container {
+  width: 1200px;
+  /* margin-left: auto;
+  margin-right: auto; */
+  margin: 0 auto;
+}
+
 .btn {
-  width: 200px;
   display: inline-block;
   padding: 20px 40px;
   border: 2px solid black;
@@ -22,4 +38,13 @@ body {
   background-color: tomato;
   color: white;
   text-decoration: none;
+}
+
+.btn-icon {
+  display: inline-block;
+  height: 20px;
+  width: 20px;
+  margin-right: 6px;
+  background-color: blue;
+  vertical-align: bottom;
 }
