--- a/css/compendium.css
+++ b/css/compendium.css
@@ -24,7 +24,9 @@ body {
 }
 
 .container {
-  width: 1200px;
+  width: 1230px;
+  padding-left: 15px;
+  padding-right: 15px;
   /* margin-left: auto;
   margin-right: auto; */
   margin: 0 auto;
