--- a/css/main.css
+++ b/css/main.css
@@ -21,6 +21,13 @@ body {
   line-height: 1.67;
 }
 
+.container {
+  margin-left: auto;
+  margin-right: auto;
+  width: 1440px;
+  outline: 2px solid tomato;
+}
+
 /* Logo */
 
 .logo {
@@ -34,6 +41,12 @@ body {
 
 .logo:hover {
   color: var(--accent-color);
+}
+
+/* Page header */
+
+.page-header {
+  background-color: #ccc;
 }
 
 /* Site nav */
@@ -101,6 +114,11 @@ body {
 /* Button */
 
 .button {
+  display: inline-block;
+  border-radius: 6px;
+  padding: 11px 34px;
+  min-width: 130px;
+
   color: var(--title-text-color);
   background-color: var(--primary-white-color);
 
@@ -108,6 +126,7 @@ body {
   font-size: 15px;
   line-height: 1.2;
   text-decoration: none;
+  text-align: center;
 }
 
 .button.primary {
@@ -118,4 +137,5 @@ body {
 .button.secondary {
   color: var(--accent-color);
   background-color: var(--primary-white-color);
+  border: 1px solid var(--accent-color);
 }
