--- a/css/main.css
+++ b/css/main.css
@@ -9,6 +9,7 @@
   --title-text-color: #000000;
   --accent-color: #18a0fb;
   --primary-white-color: #ffffff;
+  --secondary-bg-color: #f5f5f5;
 }
 
 body {
@@ -70,32 +71,57 @@ body {
 }
 
 .list {
+  padding: 0;
+  margin: 0;
   list-style: none;
 }
 
 /* Hero */
 
-.hero-title {
-  color: var(--title-text-color);
+.hero {
+  text-align: center;
+}
 
+.hero-title {
+  margin-top: 0;
+  margin-bottom: 40px;
+
+  color: var(--title-text-color);
   font-weight: 400;
   font-size: 56px;
   line-height: 1.43;
-  text-align: center;
 }
 
 /* Section */
 
+.section {
+  padding-top: 120px;
+  padding-bottom: 120px;
+}
+
+.section.no-padding {
+  padding-top: 0;
+  padding-bottom: 0;
+}
+
 .section-title {
+  margin-top: 0;
+  margin-bottom: 60px;
+
   color: var(--title-text-color);
 
   font-weight: 400;
   font-size: 48px;
   line-height: 1.5;
+}
+
+.section-title.centered {
   text-align: center;
 }
 
 .section-description {
+  margin-top: 0;
+  margin-bottom: 80px;
   font-size: 36px;
   line-height: 1.39;
 }
@@ -104,6 +130,8 @@ body {
 
 .feature-list .title,
 .work-list .title {
+  margin-top: 0;
+  margin-bottom: 24px;
   color: var(--title-text-color);
 
   font-weight: 700;
@@ -111,10 +139,28 @@ body {
   line-height: 1.5;
 }
 
+.feature-list p {
+  margin-top: 0;
+  margin-bottom: 32px;
+}
+
+/* Works */
+
+.work-list > .item {
+  padding-top: 80px;
+  padding-bottom: 80px;
+  background-color: var(--primary-white-color);
+}
+
+.work-list > .item:nth-child(2n) {
+  background-color: var(--secondary-bg-color);
+}
+
 /* Button */
 
 .button {
   display: inline-block;
+  border: 1px solid transparent;
   border-radius: 6px;
   padding: 11px 34px;
   min-width: 130px;
@@ -137,5 +183,5 @@ body {
 .button.secondary {
   color: var(--accent-color);
   background-color: var(--primary-white-color);
-  border: 1px solid var(--accent-color);
+  border-color: var(--accent-color);
 }
