--- a/css/main.css
+++ b/css/main.css
@@ -26,6 +26,8 @@ body {
   margin-left: auto;
   margin-right: auto;
   width: 1440px;
+  padding-left: 20px;
+  padding-right: 20px;
   outline: 2px solid tomato;
 }
 
@@ -47,7 +49,6 @@ body {
 /* Page header */
 
 .page-header {
-  background-color: #ccc;
 }
 
 /* Site nav */
@@ -184,4 +185,33 @@ body {
   color: var(--accent-color);
   background-color: var(--primary-white-color);
   border-color: var(--accent-color);
+}
+
+/* Footer */
+.sub-title {
+  margin-top: 0;
+  margin-bottom: 16px;
+  color: var(--title-text-color);
+
+  font-weight: 700;
+  font-size: 15px;
+  line-height: 1.6;
+}
+
+.footer-nav .link {
+  color: var(--primary-text-color);
+
+  font-size: 15px;
+  line-height: 24px;
+  text-decoration: none;
+}
+
+.copyright {
+  font-size: 15px;
+  line-height: 1.6;
+}
+
+.label {
+  font-size: 15px;
+  line-height: 1.6;
 }
