--- a/css/main.css
+++ b/css/main.css
@@ -15,11 +15,18 @@
 body {
   background-color: var(--primary-white-color);
   color: var(--primary-text-color);
-
-  font-family: 'Montserrat', sans-serif;
+  font-family: "Montserrat", sans-serif;
   letter-spacing: -0.015em;
   font-size: 18px;
   line-height: 1.67;
+}
+
+/* Утилиты */
+
+.list {
+  padding: 0;
+  margin: 0;
+  list-style: none;
 }
 
 .container {
@@ -35,8 +42,7 @@ body {
 
 .logo {
   color: var(--title-text-color);
-
-  font-family: 'Comfortaa', cursive;
+  font-family: "Comfortaa", cursive;
   font-size: 28px;
   line-height: 1.14;
   text-decoration: none;
@@ -46,11 +52,30 @@ body {
   color: var(--accent-color);
 }
 
+/* Main nav */
+
+.main-nav {
+  display: flex;
+  align-items: center;
+}
+
 /* Site nav */
 
-.site-nav .link {
-  color: var(--accent-color);
+.site-nav {
+  display: flex;
+  margin-left: 70px;
+}
 
+.site-nav .item + .item {
+  margin-left: 40px;
+}
+
+.site-nav .link {
+  display: block;
+  padding-top: 21px;
+  padding-bottom: 21px;
+
+  color: var(--accent-color);
   font-weight: 500;
   font-size: 15px;
   line-height: 1.2;
@@ -66,10 +91,15 @@ body {
   color: var(--title-text-color);
 }
 
-.list {
-  padding: 0;
-  margin: 0;
-  list-style: none;
+/* Auth-nav */
+
+.auth-nav {
+  display: flex;
+  margin-left: auto;
+}
+
+.auth-nav .item + .item {
+  margin-left: 12px;
 }
 
 /* Hero */
@@ -105,13 +135,13 @@ body {
   margin-bottom: 60px;
 
   color: var(--title-text-color);
-
   font-weight: 400;
   font-size: 48px;
   line-height: 1.5;
 }
 
-.section-title.centered {
+.section-title.centered,
+.section-description.centered {
   text-align: center;
 }
 
@@ -124,12 +154,23 @@ body {
 
 /* Features и Examples */
 
+.feature-list {
+  display: flex;
+  flex-wrap: wrap;
+  margin: -40px -75px;
+}
+
+.feature-list .item {
+  width: 625px;
+  margin: 40px 75px;
+}
+
 .feature-list .title,
 .work-list .title {
   margin-top: 0;
   margin-bottom: 24px;
-  color: var(--title-text-color);
 
+  color: var(--title-text-color);
   font-weight: 700;
   font-size: 24px;
   line-height: 1.5;
@@ -143,13 +184,62 @@ body {
 /* Works */
 
 .work-list > .item {
+  display: flex;
+  align-items: center;
   padding-top: 80px;
   padding-bottom: 80px;
   background-color: var(--primary-white-color);
 }
 
 .work-list > .item:nth-child(2n) {
+  flex-direction: row-reverse;
   background-color: var(--secondary-bg-color);
+}
+
+.work-list > .item:nth-child(2n + 1) .content {
+  margin-left: 84px;
+}
+
+.work-list > .item:nth-child(2n) .content {
+  margin-right: 84px;
+}
+
+/* Clients */
+
+.client-list {
+  display: flex;
+  flex-wrap: wrap;
+  width: 1012px;
+  margin: -30px -40px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.client-list > .item {
+  margin: 30px 40px;
+}
+
+/* SingUp */
+
+.signUp-section {
+  display: flex;
+  align-items: center;
+}
+
+.signUp-section .section-description {
+  margin-right: auto;
+}
+
+.section-description.no-margin {
+  margin-bottom: 0;
+}
+
+.join-section {
+  display: flex;
+}
+
+.join-section > a:not(:last-child) {
+  margin-right: 45px;
 }
 
 /* Button */
@@ -163,7 +253,6 @@ body {
 
   color: var(--title-text-color);
   background-color: var(--primary-white-color);
-
   font-weight: 500;
   font-size: 15px;
   line-height: 1.2;
@@ -186,8 +275,8 @@ body {
 .sub-title {
   margin-top: 0;
   margin-bottom: 16px;
-  color: var(--title-text-color);
 
+  color: var(--title-text-color);
   font-weight: 700;
   font-size: 15px;
   line-height: 1.6;
@@ -195,7 +284,6 @@ body {
 
 .footer-nav .link {
   color: var(--primary-text-color);
-
   font-size: 15px;
   line-height: 24px;
   text-decoration: none;
@@ -210,3 +298,92 @@ body {
   font-size: 15px;
   line-height: 1.6;
 }
+
+/* Разбор сетки */
+
+.test-container {
+  width: 1230px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.flex-container {
+  display: flex;
+  flex-wrap: wrap;
+  background-color: teal;
+  margin: -15px;
+}
+
+.flex-element {
+  width: 380px;
+  margin: 15px;
+
+  /* calc(100% - кол-во марджинов в строке * значение марджинов) / кол-во элементов в строке */
+  /* width: calc((100% - 60px) / 3); */
+  /* margin-right: 30px; */
+  /* margin-bottom: 30px; */
+
+  background-color: tomato;
+
+  /* margin-right: 30px;
+  margin-bottom: 30px; */
+}
+
+/* .flex-element:nth-child(3n) {
+  margin-right: 0;
+}
+
+.flex-element:nth-last-child(-n + 3) {
+  margin-bottom: 0;
+} */
+
+/* Альтернатива */
+/* .flex-element:not(:nth-child(3n)) {
+  margin-right: 30px;
+} */
+
+/* .flex-element:not(:nth-last-child(-n + 3)) {
+  margin-bottom: 30px;
+} */
+
+/* Мой пример */
+
+/* .my-container {
+  width: 1230px;
+  padding-left: 15px;
+  padding-right: 15px;
+  margin-left: auto;
+  margin-right: auto;
+  padding-bottom: 60px;
+}
+
+.my-portfolio {
+  display: flex;
+  flex-wrap: wrap;
+  padding: 0;
+  margin-top: 0;
+  margin-bottom: 0;
+  background-color: #18a0fb;
+  list-style: none;
+}
+
+.my-portfolio .item {
+  width: calc((100% - 60px) / 3);
+  margin-right: 30px;
+  margin-bottom: 30px;
+  padding: 10px;
+  background-color: tomato;
+  border-radius: 10px;
+  box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2),
+    0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+}
+
+.my-portfolio .item:nth-child(3n) {
+  margin-right: 0;
+}
+
+.my-portfolio .item:nth-last-child(-n + 3) {
+  margin-bottom: 0;
+} */
