--- a/css/04-card-overlay.css
+++ b/css/04-card-overlay.css
@@ -1,3 +1,15 @@
+.product {
+  width: 370px;
+
+  cursor: pointer;
+  box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14),
+    0px 1px 3px rgba(0, 0, 0, 0.12);
+}
+
+.product:hover .product-actions {
+  opacity: 1;
+}
+
 .product-thumb {
   position: relative;
 }
