--- a/css/04-card-overlay.css
+++ b/css/04-card-overlay.css
@@ -1,5 +1,9 @@
 .product {
   width: 370px;
+  margin-left: auto;
+  margin-right: auto;
+
+  overflow: hidden;
 
   cursor: pointer;
   box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14),
@@ -14,10 +18,7 @@
   position: relative;
 }
 
-.product-thumb::before {
-  display: inline-block;
-  content: '';
-
+.product-overlay {
   position: absolute;
   top: 0;
   left: 0;
@@ -25,7 +26,17 @@
   height: 100%;
   background-color: rgba(255, 165, 0, 0.7);
 
-  opacity: 0;
+  transform: translateX(-100%);
+
+  transition: transform 500ms var(--timing-function);
+}
+
+.product:hover .product-overlay {
+  transform: translateX(0);
+}
+
+.product:hover .product-thumb::before {
+  transform: translateX(0);
 }
 
 .product-meta {
@@ -39,17 +50,22 @@
 .product-actions {
   display: flex;
   position: absolute;
+
   top: 50%;
   left: 50%;
-
   transform: translate(-50%, -50%);
+
+  transition: opacity 500ms var(--timing-function) 500ms;
+  opacity: 0;
+
+  outline: 3px solid orange;
+}
+
+.product:hover .product-actions {
+  opacity: 1;
 }
 
 .product-actions .icon {
   width: 32px;
   height: 32px;
-}
-
-.product:hover .product-thumb::before {
-  opacity: 1;
 }
