--- a/css/styles.css
+++ b/css/styles.css
@@ -1,13 +1,14 @@
 :root {
   --primary-text-color: #2a2a2a;
   --primary-bg-color: #f9f9fd;
+  --placeholder-color: rgba(42, 42, 42, 0.7);
 }
 
 body {
-  padding: 10px;
   color: var(--primary-text-color);
   background-color: var(--primary-bg-color);
   font-size: 14px;
+  font-family: sans-serif;
   line-height: 1.5;
   letter-spacing: 0.03em;
 }
@@ -17,11 +18,97 @@ h2,
 h3,
 h4,
 h5,
-h6,
-p {
+h6 {
   margin: 0;
 }
 
 a {
   text-decoration: none;
+}
+
+textarea {
+  resize: none;
+}
+
+.form {
+  width: 600px;
+  outline: 1px solid tomato;
+  margin: 0 auto;
+  padding: 20px;
+}
+
+.form-field {
+  /* outline: 1px solid teal; */
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 20px;
+}
+
+.form-field label {
+  margin-bottom: 5px;
+}
+
+.form-field input {
+  margin: 0;
+  padding: 10px 20px;
+  border-radius: 4px;
+  border: 2px solid var(--primary-text-color);
+}
+
+.form-field input::placeholder {
+  /* к placeholder применяются только свойства текста */
+  color: var(--placeholder-color);
+}
+
+.group {
+  margin-bottom: 20px;
+}
+
+.group-title {
+  margin-bottom: 10px;
+}
+
+.topic-options,
+.experience-options {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.topic-options > li,
+.experience-options > li {
+  display: flex;
+  align-items: center;
+}
+
+.topic-options input[type="checkbox"] {
+}
+
+.topic-options label {
+  font-size: 20px;
+  margin-left: 10px;
+}
+
+.experience-options label {
+  margin-left: 10px;
+}
+
+.form-field.policy {
+  flex-direction: row;
+  align-items: center;
+}
+
+.form-field.policy label {
+  margin-bottom: 0;
+  margin-left: 5px;
+}
+
+.form .date {
+  border-width: 2px;
+  border-radius: 4px;
+  padding: 20px 40px;
+}
+
+.comment {
+  padding: 8px;
 }
