--- a/css/main.css
+++ b/css/main.css
@@ -11,16 +11,10 @@
 
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   color: #2a2a2a;
   background-color: #fff;
   line-height: 1.3;
-}
-
-@media screen and (min-width: 800px) {
-  body {
-    background-color: orange;
-  }
 }
 
 .container {
@@ -30,7 +24,26 @@ body {
   margin-right: auto;
 }
 
+@media screen and (min-width: 480px) {
+  .container {
+    width: 480px;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .container {
+    width: 768px;
+  }
+}
+
+@media screen and (min-width: 1140px) {
+  .container {
+    width: 1140px;
+  }
+}
+
 .page-header {
+  position: relative;
   border-bottom: 2px solid #000;
 }
 
@@ -45,6 +58,45 @@ body {
       -ms-flex-pack: justify;
           justify-content: space-between;
   min-height: 80px;
+}
+
+.menu-button {
+  display: -webkit-inline-box;
+  display: -ms-inline-flexbox;
+  display: inline-flex;
+  margin: 0;
+  padding: 0;
+  border: none;
+  background-color: transparent;
+}
+
+.menu-button .icon-cross {
+  display: none;
+}
+
+.menu-button.is-open .icon-cross {
+  display: block;
+}
+
+.menu-button.is-open .icon-menu {
+  display: none;
+}
+
+.menu-container {
+  display: none;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  width: 100%;
+  height: 400px;
+  background-color: palegoldenrod;
+  padding: 20px;
+  text-align: center;
+  font-size: 20px;
+}
+
+.menu-container.is-open {
+  display: block;
 }
 
 .company-logo {
@@ -69,12 +121,51 @@ body {
   margin-bottom: 24px;
 }
 
+@media screen and (min-width: 768px) {
+  .features-set {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    margin: -5px;
+  }
+}
+
+@media screen and (min-width: 1140px) {
+  .features-set {
+    margin: -10px;
+  }
+}
+
 .features-item {
   text-align: center;
   padding-top: 20px;
   padding-bottom: 20px;
   color: #fff;
   font-size: 32px;
+}
+
+@media screen and (min-width: 768px) {
+  .features-item {
+    -ms-flex-preferred-size: calc((100% - 4 * 5px) / 2);
+        flex-basis: calc((100% - 4 * 5px) / 2);
+    margin: 5px;
+  }
+}
+
+@media screen and (min-width: 1140px) {
+  .features-item {
+    -ms-flex-preferred-size: calc((100% - 6 * 10px) / 3);
+        flex-basis: calc((100% - 6 * 10px) / 3);
+    margin: 10px;
+  }
+}
+
+@media screen and (max-width: 767px) {
+  .features-item:not(:last-child) {
+    margin-bottom: 20px;
+  }
 }
 
 .features-item:nth-child(1) {
@@ -101,11 +192,31 @@ body {
   background-color: #009688;
 }
 
+@media screen and (max-width: 767px) {
+  .reviews {
+    display: none;
+  }
+}
+
+.reviews-set {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+}
+
 .reviews-item {
+  -ms-flex-preferred-size: calc(100% / 3);
+      flex-basis: calc(100% / 3);
   text-align: center;
   padding: 40px;
   color: #fff;
   font-size: 48px;
+}
+
+@media screen and (min-width: 1140px) {
+  .reviews-item {
+    font-size: 64px;
+  }
 }
 
 .reviews-item:nth-child(1) {
