--- a/sass/common.scss
+++ b/sass/common.scss
@@ -17,3 +17,37 @@ img {
   max-width: 100%;
   height: auto;
 }
+
+.hero {
+  background-image: url('mobile.jpg');
+}
+
+@media (min-resolution: 2dppx) {
+  .hero {
+    background-image: url('mobile2x.jpg');
+  }
+}
+
+@media screen and (min-width: 489px) {
+  .hero {
+    background-image: url('tablet.jpg');
+  }
+
+  @media (min-resolution: 2dppx) {
+    .hero {
+      background-image: url('tablet2x.jpg');
+    }
+  }
+}
+
+@media screen and (min-width: 769px) {
+  .hero {
+    background-image: url('desktop.jpg');
+  }
+
+  @media (min-resolution: 2dppx) {
+    .hero {
+      background-image: url('desktop2x.jpg');
+    }
+  }
+}
